# tldr

./: .gitignore  Cargo.toml  LICENSE  README.md  custom_prompt.txt
src/: cli.rs  embed.rs  llm.rs  main.rs  rag.rs
src/diagram/: ascii.rs
src/llm/: client.rs  gemini.rs  llm_speed.rs  mod.rs  openai.rs  prompt.rs  provider.rs  streaming.rs
src/util/: ext.rs  filters.rs  mod.rs  readme.rs
