[package]
name = "tldrs"
version = "0.1.2"
edition = "2024"
description = "README.md generator powered by LLMs and codebase analysis"
repository = "https://github.com/pixperk/tldrs"
documentation = "https://github.com/pixperk/tldrs"
license = "MIT"

[dependencies]
clap ={ version = "4.5", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.4"
indicatif = "0.18.0"
anyhow = "1.0"
